disable buttons logically

--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -7,5 +7,11 @@
 }
 
 .button:hover {
+  cursor: pointer;
   background-color: var(--color-nemo);
+}
+
+.button:disabled {
+  background-color: darkgray;
+  color: transparent;
 }
